Fixed scrollbars.

--- a/Source/EtAlii.Trends/wwwroot/css/site.css
+++ b/Source/EtAlii.Trends/wwwroot/css/site.css
@@ -2,6 +2,9 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 h1:focus {
